# ikano_bank_case

./: Dockerfile.api  Dockerfile.app  README.md  docker-compose.yml  pyproject.toml  tasks.py
src/ikano_case/: api.py  app.py  ikano_case.py
tests/: test_api.py  test_ikano_case.py
